--- a/engage.html
+++ b/engage.html
@@ -1,13 +1,7 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Jan 19 2021 07:13:07 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Feb 03 2021 00:02:30 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f6dd0dc379bd728fc08022f" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
-  <link rel="preload" href="/fonts/archia-regular-webfont.woff2" as="font" type="font/woff2" crossorigin>
-  <link rel="preload" href="/fonts/archia-medium-webfont.woff2" as="font" type="font/woff2" crossorigin>
-  <link rel="preload" href="/fonts/archia-semibold-webfont.woff2" as="font" type="font/woff2" crossorigin>
-  <link rel="preload" href="/fonts/archia-bold-webfont.woff2" as="font" type="font/woff2" crossorigin>
-  <link rel="preload" href="/fonts/archia-light-webfont.woff2" as="font" type="font/woff2" crossorigin>
-  <link rel="preload" href="/fonts/archia-thin-webfont.woff2" as="font" type="font/woff2" crossorigin>
   <meta charset="utf-8">
   <title>Optimise your engagement and ad revenue | Storipress</title>
   <meta content="Increase your readership by 20% on Storipress&#x27; CMS. Storipress&#x27; myriad of performance and engagement features ensure more readers discover, read, and share your content." name="description">
@@ -24,11 +18,20 @@
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/storipress-landing.webflow.css" rel="stylesheet" type="text/css">
+  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
+  <script type="text/javascript">WebFont.load({  google: {    families: ["Inconsolata:400,700"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
-  <link href="https://storipress.com/engage" rel="canonical"><!--  Google Tag Manager  -->
+  <link href="https://storipress.com/engage" rel="canonical">
+  <link rel="preload" href="/fonts/archia-regular-webfont.woff2" as="font" type="font/woff2" crossorigin="">
+  <link rel="preload" href="/fonts/archia-medium-webfont.woff2" as="font" type="font/woff2" crossorigin="">
+  <link rel="preload" href="/fonts/archia-semibold-webfont.woff2" as="font" type="font/woff2" crossorigin="">
+  <link rel="preload" href="/fonts/archia-bold-webfont.woff2" as="font" type="font/woff2" crossorigin="">
+  <link rel="preload" href="/fonts/archia-light-webfont.woff2" as="font" type="font/woff2" crossorigin="">
+  <link rel="preload" href="/fonts/archia-thin-webfont.woff2" as="font" type="font/woff2" crossorigin="">
+  <!--  Google Tag Manager  -->
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
@@ -140,6 +143,15 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <a href="#Footer-CTA" class="button stickybutton w-inline-block">
     <div class="text-block-17">Join Beta</div>
   </a>
+  <div data-w-id="575e77cc-6891-d39c-1119-2de030cea240" class="cookie-modal">
+    <div class="cookie-pic">🍪</div>
+    <p class="cookie-description">This site uses cookies. <a href="legal/cookie-policy" class="blog-link cookie">Learn more.</a>
+    </p>
+    <div data-w-id="575e77cc-6891-d39c-1119-2de030cea247" class="close-button">
+      <div class="close-line _45-deg"></div>
+      <div class="close-line _45deg"></div>
+    </div>
+  </div>
   <div data-w-id="45a626de-ca0b-2563-74be-f2b582109958" class="feature-section hero">
     <div class="feature-bounding-box">
       <div class="feature-hero-text-parent engagement">
@@ -351,65 +363,74 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <a href="https://www.linkedin.com/company/19119329/" target="_blank" class="footer-contact-buttons w-inline-block"><img src="images/LinkedIn-Logo.svg" loading="lazy" alt="LinkedIn Logo" class="image-68"></a>
           </div>
         </div>
-        <div class="footer-div">
-          <h5 class="footer-list-heading">Product</h5>
-          <ul role="list" class="w-list-unstyled">
-            <li>
-              <a href="manage" class="footer-text">Workflow</a>
-            </li>
-            <li>
-              <a href="create" class="footer-text">Editor</a>
-            </li>
-            <li>
-              <a href="build" class="footer-text">Builder</a>
-            </li>
-            <li>
-              <a href="engage" aria-current="page" class="footer-text w--current">Engage &amp; Earn</a>
-            </li>
-            <li>
-              <a href="hosting" class="footer-text">Hosting &amp; Performance</a>
-            </li>
-            <li>
-              <a href="pricing" class="footer-text">Pricing</a>
-            </li>
-          </ul>
-        </div>
-        <div class="footer-div hidden">
-          <h5 class="footer-list-heading">Resources</h5>
-          <ul role="list" class="w-list-unstyled">
-            <li>
-              <a href="#" class="footer-text">About Us</a>
-            </li>
-            <li>
-              <a href="#" class="footer-text">Press</a>
-            </li>
-            <li>
-              <a href="#" class="footer-text">Partner Program</a>
-            </li>
-            <li>
-              <a href="#" class="footer-text">Cookie Policy</a>
-            </li>
-          </ul>
-        </div>
-        <div class="footer-div">
-          <h5 class="footer-list-heading">Compare</h5>
-          <ul role="list" class="w-list-unstyled">
-            <li>
-              <a href="vs/wordpress" class="footer-text">WordPress</a>
-            </li>
-            <li>
-              <a href="vs/wix" class="footer-text">Wix</a>
-            </li>
-            <li>
-              <a href="vs/medium" class="footer-text">Medium</a>
-            </li>
-            <li>
-              <a href="vs/wordpress" class="footer-text">WordPress: Hidden Costs</a>
-            </li>
-          </ul>
+        <div class="div-block-1455">
+          <div class="footer-div">
+            <h5 class="footer-list-heading">Product</h5>
+            <ul role="list" class="w-list-unstyled">
+              <li>
+                <a href="manage" class="footer-text">Workflow</a>
+              </li>
+              <li>
+                <a href="create" class="footer-text">Editor</a>
+              </li>
+              <li>
+                <a href="build" class="footer-text">Builder</a>
+              </li>
+              <li>
+                <a href="engage" aria-current="page" class="footer-text w--current">Engage &amp; Earn</a>
+              </li>
+              <li>
+                <a href="hosting" class="footer-text">Hosting &amp; Performance</a>
+              </li>
+              <li>
+                <a href="pricing" class="footer-text">Pricing</a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer-div">
+            <h5 class="footer-list-heading">Compare</h5>
+            <ul role="list" class="w-list-unstyled">
+              <li>
+                <a href="vs/wordpress" class="footer-text">WordPress</a>
+              </li>
+              <li>
+                <a href="vs/wix" class="footer-text">Wix</a>
+              </li>
+              <li>
+                <a href="vs/medium" class="footer-text">Medium</a>
+              </li>
+              <li>
+                <a href="vs/wordpress" class="footer-text">WordPress: Hidden Costs</a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer-div hidden">
+            <h5 class="footer-list-heading">Company</h5>
+            <ul role="list" class="w-list-unstyled">
+              <li class="list-item-4">
+                <a href="https://github.com/f2etw/jobs/issues/798" target="_blank" class="footer-text">Careers</a>
+                <div class="text-block-61">We&#x27;re hiring!</div>
+              </li>
+              <li>
+                <a href="legal/terms" class="footer-text">Terms of Service</a>
+              </li>
+              <li>
+                <a href="legal/global-privacy-policy" class="footer-text">Global Privacy Policy</a>
+              </li>
+              <li>
+                <a href="legal/publisher-agreement" class="footer-text">Publisher Agreement</a>
+              </li>
+              <li>
+                <a href="legal/content-guidelines" class="footer-text">Content Guidelines</a>
+              </li>
+              <li>
+                <a href="legal/cookie-policy" class="footer-text">Cookie Policy</a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
-      <div class="footer-copyright-notice">© Storipress</div>
+      <div class="footer-copyright-notice">© Storipress. All Rights Reserved.</div>
     </div>
   </footer>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5f475d95bc662b718071304a" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
@@ -418,5 +439,16 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <!--  Google Tag Manager (noscript)  -->
   <noscript><iframe src="https://www.googletagmanager.com/ns?id=GTM-5WLPRZG" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!--  End Google Tag Manager (noscript)  -->
+  <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
+  <script>
+var cookieName = 'cookieClosed';
+if(typeof Cookies.get(cookieName) !== 'undefined') {
+  document.querySelector('.cookie-modal').remove()
+}
+document.querySelector('.close-button').addEventListener('click', function() {
+  Cookies.set(cookieName, 'ok', { expires: 20 });
+  document.querySelector('.cookie-modal').remove()
+});
+</script>
 </body>
 </html>
