--- a/login.html
+++ b/login.html
@@ -1,13 +1,7 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Jan 19 2021 07:13:07 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Feb 03 2021 00:02:30 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="60054325a2c2462ab454fc5a" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
-  <link rel="preload" href="/fonts/archia-regular-webfont.woff2" as="font" type="font/woff2" crossorigin>
-  <link rel="preload" href="/fonts/archia-medium-webfont.woff2" as="font" type="font/woff2" crossorigin>
-  <link rel="preload" href="/fonts/archia-semibold-webfont.woff2" as="font" type="font/woff2" crossorigin>
-  <link rel="preload" href="/fonts/archia-bold-webfont.woff2" as="font" type="font/woff2" crossorigin>
-  <link rel="preload" href="/fonts/archia-light-webfont.woff2" as="font" type="font/woff2" crossorigin>
-  <link rel="preload" href="/fonts/archia-thin-webfont.woff2" as="font" type="font/woff2" crossorigin>
   <meta charset="utf-8">
   <title>Login</title>
   <meta content="Login" property="og:title">
@@ -17,11 +11,20 @@
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/storipress-landing.webflow.css" rel="stylesheet" type="text/css">
+  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
+  <script type="text/javascript">WebFont.load({  google: {    families: ["Inconsolata:400,700"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
-  <link href="https://storipress.com/login" rel="canonical"><!--  Google Tag Manager  -->
+  <link href="https://storipress.com/login" rel="canonical">
+  <link rel="preload" href="/fonts/archia-regular-webfont.woff2" as="font" type="font/woff2" crossorigin="">
+  <link rel="preload" href="/fonts/archia-medium-webfont.woff2" as="font" type="font/woff2" crossorigin="">
+  <link rel="preload" href="/fonts/archia-semibold-webfont.woff2" as="font" type="font/woff2" crossorigin="">
+  <link rel="preload" href="/fonts/archia-bold-webfont.woff2" as="font" type="font/woff2" crossorigin="">
+  <link rel="preload" href="/fonts/archia-light-webfont.woff2" as="font" type="font/woff2" crossorigin="">
+  <link rel="preload" href="/fonts/archia-thin-webfont.woff2" as="font" type="font/woff2" crossorigin="">
+  <!--  Google Tag Manager  -->
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
@@ -36,5 +39,16 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <!--  Google Tag Manager (noscript)  -->
   <noscript><iframe src="https://www.googletagmanager.com/ns?id=GTM-5WLPRZG" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!--  End Google Tag Manager (noscript)  -->
+  <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
+  <script>
+var cookieName = 'cookieClosed';
+if(typeof Cookies.get(cookieName) !== 'undefined') {
+  document.querySelector('.cookie-modal').remove()
+}
+document.querySelector('.close-button').addEventListener('click', function() {
+  Cookies.set(cookieName, 'ok', { expires: 20 });
+  document.querySelector('.cookie-modal').remove()
+});
+</script>
 </body>
 </html>
